[package]
name = "ieu"
version = "0.1.0"
edition = "2024"
description = "A low-overhead parallel thread pool"
license = "MIT"
repository = "https://github.com/mrvillage/ieu"

[dependencies]
aligned-vec = "0.6.4"
diol = "0.13.1"
lazy_static = "1.5.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
spindle = "0.2.3"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
