[package]
name = "ieu"
version = "0.1.0"
edition = "2024"
description = "A low-overhead parallel thread pool"
license = "MIT"
repository = "https://github.com/mrvillage/ieu"

[dependencies]
lazy_static = "1.5.0"
num_cpus = "1.16.0"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[[bench]]
name = "basic"
harness = false

[dev-dependencies]
diol = "0.13.1"
